--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="new year.css">
     <link rel="stylesheet" href="<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     
 </head>
 <body>
@@ -50,6 +50,50 @@
                 <p ><button class="btn" >Join Now</button></p></div>
 
             </div>
+
+
+            <div class="div10">
+                <div class="div11">
+                    <h3 class="h1">NEW BEST OFFER</h3>
+                    <h2 class="h2"> Coming Soon</h2>
+                    <p class="p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+
+                </div>
+                <div class="div12">
+                    <img src="Ellipse 1.png" alt="" class="img5">
+
+                </div>
+                <div class="div13">
+                    <h3 class="h4">2024</h3>
+                    <p class="p3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="Group 96.png" alt="" class="img6">
+
+                </div>
+                
+            </div>
+
+            <div class="div17">
+            <div class="div15">
+                <h3 class="h6">
+                    WHAT IS FUNCTIONAL
+                </h3>
+                <h1 class="h7">
+                    <span class="or">Holidays</span> Sale 50%
+                </h1>
+                <p class="p5">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.
+                </p>
+            </div>
+
+            <div class="mulimg">
+                <img src="Group 75.png" alt="" class="img11">
+                <img src="Group 44.png" alt="" class="img10">
+                <img src="Rectangle 1.png" alt="" class="img9">
+            </div>
+            <img src="Rectangle 2.png" alt="" class="img8">
+        </div>
 
         </section>
     </main>
